Table style commit

--- a/assets/pages.css
+++ b/assets/pages.css
@@ -39,3 +39,7 @@
     margin-left: 150px;
     padding-left: 20px;
   }
+  table, th, td {
+    border: 2px solid black;
+   border-collapse: collapse;
+  }
