--- a/assets/styles.css
+++ b/assets/styles.css
@@ -10,7 +10,8 @@ html {
 }
 .header {
     background-color: black;
-    position: sticky;
+    position: fixed;
+    width: 100%;
     top: 0px;
     height: 43px;
 }
