--- a/assets/pages.css
+++ b/assets/pages.css
@@ -1,52 +1,61 @@
 * {
-    box-sizing: border-box;
-  }
-  
-  body {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  /* Style the side navigation */
-  .sidenav {
-    height: 100%;
-    width: 150px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #111;
-    overflow-x: hidden;
-  }
-  
-  
-  /* Side navigation links */
-  .sidenav a {
-    color: white;
-    padding: 16px;
-    text-decoration: none;
-    display: block;
-  }
-  
-  /* Change color on hover */
-  .sidenav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Style the content */
-  .content {
-    margin-left: 150px;
-    padding-left: 50px;
-    padding-right: 40px;
-  }
-  table, th, td {
-    border: 2px solid black;
-   border-collapse: collapse;
-  }
-  .information {
-    padding: 0px 15px;
-  }
-  thead {
-    background-color: #B76E0B;
-  }
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Style the side navigation */
+.sidenav {
+  height: 100%;
+  width: 150px;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: #111;
+  overflow-x: hidden;
+}
+
+
+/* Side navigation links */
+.sidenav a {
+  color: white;
+  padding: 16px;
+  text-decoration: none;
+  display: block;
+}
+
+/* Change color on hover */
+.sidenav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Style the content */
+.content {
+  margin-left: 150px;
+  padding-left: 50px;
+  padding-right: 40px;
+}
+table, th, td {
+  border: 2px solid black;
+  border-collapse: collapse;
+}
+.information {
+  padding: 0px 15px;
+}
+thead {
+  background-color: #B76E0B;
+}
+.name {
+  font-weight: bold;
+}
+.personal-test {
+  margin-top: 100px;
+}
+img {
+  width: 100%;
+}
